--- a/stylesheets/custom.css
+++ b/stylesheets/custom.css
@@ -11,7 +11,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    color: #ffb900;
+    color: #980000;;
     font-family: 'Libre Baskerville', serif;
 }
 
