--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -125,3 +125,20 @@ body {
         width: 100%;
     }
 }
+
+.custom-card-img.with-yt {
+    position: relative;
+    cursor: pointer;
+}
+
+.yt-video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    opacity: 0;
+    width: 100%;
+    height: 100%;
+    padding: 25px;
+    transition: 1s;
+}
